# DEXO-Control-Core

./: .gitignore  CLAUDE.md  MIT_Mode_Candlelight.py  New architecture ROS.txt  STATE_LOCK_DOCUMENTATION.md  Summary of configurations of motor control node.yaml  Summary of the Complete Emergency Stop Node Implementation.yaml
src/exoskeleton_control/: CMakeLists.txt  package.xml
src/exoskeleton_control/config/: emergency_stop_config.yaml  gait_planner_config.yaml  motor_control_2motors_config.yaml  motor_control_config.yaml  single_motor_config.yaml  trajectory_generator_config.yaml
src/exoskeleton_control/launch/: core_nodes.launch  core_nodes_2motors.launch  dummy_crutches_launch.launch  emergency_stop.launch  exoskeleton_control.launch  exoskeleton_system.launch  gait_planner_launch.launch  motor_control.launch  single_motor_test.launch  trajectory_generator.launch  trajectory_generator_launch.launch
src/exoskeleton_control/msg/: CrutchCommand.msg  EStopTrigger.msg  ExoskeletonState.msg  GaitParams.msg  JointsTrajectory.msg  MotorStatus.msg  Torques.msg
src/exoskeleton_control/scripts/: MIT_motor_controller_v2.py  dummy_crutches.py  dummy_crutches_node.py  emergency_stop_node.py  forward_kinematics_service.py  gait_planner_node.py  inverse_kinematics_closed_chain_service.py  inverse_kinematics_leg_service.py  mit_motor_controller.py  mit_motor_controlleraerhdfhz.py  motor_control_node.py  motor_control_node_2motors.py  single_motor_control_node.py  test_config_script.py  test_emergency_stop.py  test_motor_communication.py  test_motor_config.py  (+1 more)
(+18 files in other folders)
